device_trigger working for universal switch. Add logbook for bosch_shc.click event.

--- a/bosch_shc/translations/en.json
+++ b/bosch_shc/translations/en.json
@@ -31,10 +31,14 @@
             "already_configured": "Device is already configured"
         }
     },
-    "device_automation": {
+    "device_automation":{
+        "trigger_subtype": {
+            "LOWER_BUTTON": "Lower Button",
+            "UPPER_BUTTON": "Upper button"
+        },
         "trigger_type": {
-            "turned_off": "{entity_name} wurde ausgeschaltet",
-            "turned_on": "{entity_name} wurde angeschaltet"
+            "PRESS_SHORT": "{subtype} short clicked",
+            "PRESS_LONG": "{subtype} long clicked"
         }
     }
 }
