--- a/bosch_shc/translations/de.json
+++ b/bosch_shc/translations/de.json
@@ -30,5 +30,15 @@
         "abort": {
             "already_configured": "Gerät ist bereits konfiguriert"
         }
+    },
+    "device_automation":{
+        "trigger_subtype": {
+            "LOWER_BUTTON": "Unterer Knopf",
+            "UPPER_BUTTON": "Oberer Knopf"
+        },
+        "trigger_type": {
+            "PRESS_SHORT": "{subtype} kurz gedrückt",
+            "PRESS_LONG": "{subtype} lang gedrückt"
+        }
     }
 }
