Refactored trigger events. Scenario and switch events renamed. Added support for motion events.

--- a/custom_components/bosch_shc/translations/de.json
+++ b/custom_components/bosch_shc/translations/de.json
@@ -38,7 +38,9 @@
         },
         "trigger_type": {
             "PRESS_SHORT": "{subtype} kurz gedrückt",
-            "PRESS_LONG": "{subtype} lang gedrückt"
+            "PRESS_LONG": "{subtype} lang gedrückt",
+            "MOTION": "Bewegung erkannt",
+            "SCENARIO": "Szenario ausgelöst: {subtype}"
         }
     }
 }
