Added feature to register new client during config_flow.

--- a/custom_components/bosch_shc/translations/de.json
+++ b/custom_components/bosch_shc/translations/de.json
@@ -4,21 +4,18 @@
         "flow_title": "Bosch SHC: {name}",
         "step": {
             "confirm_discovery": {
-                "description": "Möchten Sie das {model} bei {host} einrichten?"
+                "description": "Drücke den Knopf auf dem Bosch Smart Home Controller bis die LED zu blinken anfängt.\nSind Sie bereit, {model} mit Home Assistant zu registrieren?"
             },
             "credentials": {
                 "data": {
-                    "ssl_certificate": "Öffentlicher Schlüssel des SSL-Zertifikats",
-                    "ssl_key": "Privater Schlüssel des SSL-Zertifikats"
+                    "password": "Passwort des Smart Home Controllers"
                 }
             },
             "user": {
-                "description": "Richten Sie Ihre Bosch SHC-Instanz ein, um die Überwachung und Steuerung zu ermöglichen.",
+                "description": "Richten Sie Ihren Bosch Smart Home Controller ein, um die Überwachung und Steuerung mit Home Assistant zu ermöglichen.",
                 "title": "SHC-Authentifizierungsparameter",
                 "data": {
-                    "host": "Host",
-                    "ssl_certificate": "Öffentlicher Schlüssel des SSL-Zertifikats",
-                    "ssl_key": "Privater Schlüssel des SSL-Zertifikats"
+                    "host": "Host"
                 }
             }
         },
