--- a/custom_components/bosch_shc/translations/en.json
+++ b/custom_components/bosch_shc/translations/en.json
@@ -17,15 +17,24 @@
                 "data": {
                     "host": "Host"
                 }
+            },
+            "reauth_confirm": {
+                "title": "SHC authentication parameters",
+                "description": "The bosch_shc integration needs to re-authenticate your account",
+                "data": {
+                    "host": "Host"
+                }
             }
         },
         "error": {
             "cannot_connect": "Failed to connect",
             "invalid_auth": "Invalid authentication",
+            "pairing_failed": "Pairing failed",
             "unknown": "Unexpected error"
         },
         "abort": {
-            "already_configured": "Device is already configured"
+            "already_configured": "Device is already configured",
+            "reauth_successful": "Re-authentication was successful"
         }
     },
     "device_automation":{
