--- a/custom_components/bosch_shc/translations/de.json
+++ b/custom_components/bosch_shc/translations/de.json
@@ -29,7 +29,7 @@
         "error": {
             "cannot_connect": "Verbindung fehlgeschlagen",
             "invalid_auth": "Ungültige Authentifizierung",
-            "pairing_failed": "Pairing fehlgeschlagen",
+            "pairing_failed": "Pairing fehlgeschlagen... Drücke den Knopf auf dem Bosch Smart Home Controller bis die LED zu blinken anfängt und prüfe dein Passwort.",
             "unknown": "Unerwarteter Fehler"
         },
         "abort": {
