Bugfixes and improvements: * Speedup of component initialization * Fixed water leakage sensor * Suggestions from ha-core integration PR * Bumped to boschshcpy==0.2.18 * Increased to version 0.4.3

--- a/custom_components/bosch_shc/translations/de.json
+++ b/custom_components/bosch_shc/translations/de.json
@@ -29,7 +29,8 @@
         "error": {
             "cannot_connect": "Verbindung fehlgeschlagen",
             "invalid_auth": "Ungültige Authentifizierung",
-            "pairing_failed": "Pairing fehlgeschlagen... Drücke den Knopf auf dem Bosch Smart Home Controller bis die LED zu blinken anfängt und prüfe dein Passwort.",
+            "pairing_failed": "Pairing fehlgeschlagen; Drücke den Knopf auf dem Bosch Smart Home Controller bis die LED zu blinken anfängt und prüfe dein Passwort.",
+            "session_error": "Session-Fehler: API liefert ungültiges Resultat.",
             "unknown": "Unerwarteter Fehler"
         },
         "abort": {
